# gdsn-to-gs1-jsonld

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  DESIGN.md  LICENSE  README.md  gdsn_to_gs1_web_vocabulary_mapping_catalog_v0_3_webvoc_validated.csv  gdsn_to_webvoc_mapping_review_issues.csv  pyproject.toml  requirements.txt
app/: __init__.py  streamlit_app.py  ui.py  workflow_shared.py
builder_manifest/: product_builder_v0_10.yaml
docs/: UI_CHANGES.md  UI_IMPLEMENTATION_PLAN.md  ai-relevance.md  architecture.md  before-after-example.md  bulk-xml-batch-conversion.md  demo-story.md  design-direction.md  getting-started.md  index.md  internal-positioning.md  jsonld-output.md  manual-jsonld-builder.md  mapping-candidate-generator.md  mapping-catalog.md  mapping-quality-checks.md  mapping-quality-warning-review-v0.4.0.md  mapping.md  open-governance-questions.md  product-passport-bridge.md  product-passport-builder.md  reference-data-import.md  roadmap.md  sample-testing.md  source-data-inventory.md  stakeholder-one-pager.md  strategic-next-steps.md  streamlit-app.md  v0.3.0-design.md  warning-cleanup-v0.6.1.md  web-vocabulary-conformance-review.md  webvoc-explorer.md  webvoc-update-monitor.md
mapping/: mapping_mvp.yaml  mapping_template.yaml  mapping_v0_2.yaml  mapping_v0_3.yaml
mapping_catalog/: GDSN_Attributes_with_BMSId_xPath_3.1.36_June_5_2026.xlsx  README.md  gs1_webvoc_terms_used_in_mapping_catalog.csv
reference_data/: source_manifest.json
tests/: conftest.py  test_batch_converter.py  test_catalog_quality.py  test_cli.py  test_jsonld_builder.py  (+16 more)
(+102 files in other folders)
