[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gdsn-to-gs1-jsonld"
version = "0.13.0"
description = "Convert GDSN product XML into GS1 Web Vocabulary JSON-LD using configurable mappings."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "ivoed22" }]
dependencies = [
  "lxml",
  "pydantic>=2",
  "PyYAML",
  "pandas",
  "openpyxl",
  "typer",
  "pyld",
  "jsonschema>=4",
]

[project.optional-dependencies]
dev = ["pytest", "streamlit"]
app = ["streamlit"]

[project.scripts]
gdsn-to-gs1-jsonld = "gdsn_to_gs1_jsonld.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
